@@ -268,6 +268,7 @@ All (GUI):
 - Fix reading some previously not loaded GIF images (Mark Wagner, #22799).
 - Fix wxGrid selection after deleting rows/cols (Dietmar Schwertberger, 24286).
 - Auto-grow in-place editor in generic wxListCtrl again (taler21, #24293).
+- Center labels in generic wxListCtrl correctly again (taler21, #24292).
 
 wxGTK:
 
